--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ var doge = document.getElementById("dogecoinHere");
 var liveprice = {
     "async": true,
     "scroosDomain": true,
-    "url": "https://api.coingecko.com/api/v3/simple/price?ids=bitcoinHere%2ClitecoinHere%2CethereumHere%2CdogecoinHere&vs_currencies=usd",
+    "url": "https://api.coingecko.com/api/v3/simple/price?ids=bitcoin%2Clitecoin%2Cethereum%2Cdogecoin&vs_currencies=usd",
 
     "method": "GET",
     "headers": {}
@@ -68,9 +68,9 @@ var liveprice = {
 
 $.ajax(liveprice).done(function (response){
     btc.innerHTML = response.bitcoin.usd;
-    ltc.innerHTML = response.litecoinHere.usd;
-    eth.innerHTML = response.ethereumHere.usd;
-    doge.innerHTML = response.dogecoinHere.usd;
+    ltc.innerHTML = response.litecoin.usd;
+    eth.innerHTML = response.ethereum.usd;
+    doge.innerHTML = response.dogecoin.usd;
 
 });
 
